@@ -1,0 +1,12 @@
+#!/bin/bash
+
+# setup grid stuff
+source /etc/profile.d/grid-env.sh
+
+# import env vars from sysconfig
+source @@install_dir@@/etc/sysconfig/panda_server-sysconfig
+
+# set PYTHONPATH for LFC.py
+export PYTHONPATH=/usr/lib64/python@@python_exec_version@@/site-packages:$PYTHONPATH
+
+python@@python_exec_version@@ @@install_purelib@@/pandaserver/proxycache/panda_activeusers_query.py >> @@install_dir@@/var/log/panda/panda-proxyCache.log
